# project_nova

./: .gitignore  AI_CONTEXT.md  ARCHITECTURE.md  README.md  ROADMAP.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: nova-context.prompt.md
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  PROJECT_CONTEXT.md
docs/project_docs/: ARCHITECTURE.md  DECISIONS.md  PROJECT_STATUS.md  README.md  nova_manifest.yaml
nova_core/: __init__.py  app.py  config.py  events.py
nova_core/model_provider/: __init__.py  azure_ai_foundry.py
nova_core/plugins/: __init__.py  base.py  memory.py
scripts/: update_status.py
tests/: test_app.py
